<resources>
    <string name="app_name">Miss Stats</string>
    <string-array name="scrap_item_title">
        <item>Meet Miss Stats</item>
        <item>What is Statistics?</item>
        <item>Your Toolbox</item>
        <item>Probability</item>
        <item>The Shape of Normality</item>
        <item>The Monty Hall Problem</item>
        <item>Quizzes</item>
    </string-array>
    <string-array name="scrap_item_subtitle">
        <item>Your friendly neighborhood statistician</item>
        <item>Reality through data</item>
        <item>How to describe data</item>
        <item>The power of one</item>
        <item>We are all under a bell</item>
        <item>How to win a tv show</item>
        <item>Test your knowledge</item>
    </string-array>
    <string name="meetMissStats_1">Your Friendly Neighborhood Statistician</string>
    <string name="meetMissStats_2"><b><i>Miss Stats</i></b> is the <i>Statistics teacher</i> everyone would be happy to meet, even who ignore what Statistics is. \n
    Her mission is to spread the knowledge of Statistics everywhere with simple and  effective words and above all with the help of many, many examples. \n
    Once, many years ago, I told her (I even don\'t remember about what): \n
    <i>\"Miss Stats, this is really impossible for me, this would never happen!\",</i>
   but she answered me, and I have never forgot it: \n
    <b><i>\"Nothing is impossible. There are only things extremely improbable\"</i></b>
   and then she calculated with extremely precision what my chance were.\n
     No problem, big or small, can scare Miss Stats, her motto is always: \n
    <b><i>\"Give me enough data and I will give you the solution\".\n</i> </b>
    Numbers, according to Miss Stats, are very often undervalued, somebody think they are useful only for calculating results,
        but this isn\'t true: if you observe them with attention,
    like a true detective, they can tell you incredible stories and disclose entire secret worlds. </string>
    <string name="meetMissStats_3">Follow Miss Stats through this app, you won\'t regret it!</string>
    <string name="whatIsStatics_1">Reality Through Data</string>
    <string name="whatIsStatistics_2">According to Miss Stats, <b>Statistics</b> is the science that transforms huge collections of <b>data</b>, numerical and not numerical, in something that makes sense for a normal human being, something
that can tell you a story. \n
The first thing to do in Statistics is always the same: <b>collect data</b>, because data are the basis for every statistical story.
That\'s why statisticians ask people so many strange questions, like: \n
<i>\"What is your favorite ice cream flavor?\" \n</i>
<i>\"Do you buy more ice  cream in summer or in winter?\"</i> \n
Statisticians fill pages and pages of data, they study them from every point of view, they draw graphics showing the most preferred ice-creams and how many ice-creams are sold in
every season. \n
With data at hand, statisticians pass to the second phase: they must interpret the data, that\'s to say they must give them a meaning. This is the most difficult moment,
 the moment that divides artists (like Miss Stats) from amateurs. \n
 A statistical story could tell: <i>"Most of people eat much more ice-cream in Summer, especially chocolate and vanilla".</i>
 This kind of stories are really important: they are used to make things work properly. \n
 Imagine a world where the ice-cream flavors in your most trusted ice cream shop are decided by pure randomness and not by science.\n Terrible things could happen!
 In Summer your local vendor could run out of chocolate and vanilla ice creams. \nDo you know which are the feelings of someone who wants a chocolate ice cream and finds only carrot and broccoli ice creams?
 I suppose you don\'t: well, you can thank Statistics for this.
    </string>
    <string-array name="ToolboxArgumentTitles">
        <item>A Simple Sample</item>
        <item>The Mean</item>
        <item>The Five-number Summary</item>
        <item>The Minimum</item>
        <item>The Maximum</item>
        <item>The Median</item>
        <item>The Lower Quartile</item>
        <item>The Upper Quartile</item>
        <item>Reflections</item>

    </string-array>
    <string name="probability_in_practice_title">Probability In Practice</string>
    <string name="probability_in_practice_intro">Let\'s practice a bit with one of favourite Miss Stats\' coin (she is has a huge collections of coins she uses to practice about statistics),
  you can see it here below. \n Miss Stats\' coin has a face with a thumb up and a face with a thumb down, instead of regular head and tail, but beside this
  it is exactly like every other fair coin: there is a 0.5 probability of seeing a thumb up and a 0.5 probability of seeing a thumb down, this is equivalent to say
  that when you spin the coin, half of the time you will see a thumb up and the other half you will see a thumb down.\n
  <b>Touch the coin to spin it and touch it again to stop it. </b>\n
  Miss Stats will update the count of thumbs up and thumbs down for you.\n You will notice that as the number of spins increases, the number of times you observe
  thumbs up becomes gradually more similar to number of times you observe thumbs down.
    </string>
    <string name="spinning_coin_reset_button">RESET</string>
</resources>