<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp"
        android:background="#FFFFFF"
        android:clipToPadding="false"
        tools:context="stats.aleperf.example.spinningcoin.MainActivity">

        <TextView
            android:id="@+id/probability_page_1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            style="@style/title_miss_stats"
            android:text="@string/probability_in_practice_title"
            />

        <TextView
            android:id="@+id/probability_page_1_presentation"
            style="@style/descriptive_font_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="21dp"
            android:text="@string/probability_in_practice_intro" />

        <ImageView
            android:id="@+id/spinning_coin"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:paddingBottom="21dp"
            android:layout_gravity="center_horizontal|center_vertical"
            tools:src="@drawable/thumb_up"
            android:adjustViewBounds="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/little_thumb_up"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/counter_thumb_up"/>
                <TextView
                    android:id="@+id/thumb_up_counter_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:textSize="27dp"
                    tools:text ="0"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/little_thumb_down"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/counter_thumb_down"/>
                <TextView
                    android:id="@+id/thumb_down_counter_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:textSize="27dp"
                    tools:text ="0"/>

            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/spinning_coin_reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="16dp"
            android:elevation="20dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/spinning_coin_reset_button_text"
            android:text="@string/spinning_coin_reset_button"
            android:background="@color/spinning_coin_reset_button_background"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>